--- a/README
+++ b/README
@@ -9,4 +9,5 @@ FEATURES:
 • circumflex and titles are dead
 • control+shift+[a-z] as alternative to meta+[a-z]
 • mapped meta+shift+[0-9]
+• mapped alt+control+[left|right] to control+x,[left|right]
 
