--- a/README
+++ b/README
@@ -6,7 +6,7 @@ FEATURES:
 • switch to any of the 63 VT:s
 • swapped left control with caps lock
 • swapped left alternative with less
-• circumflex and titles are dead
+• circumflex and title are dead
 • control+shift+[a-z] as alternative to meta+[a-z], for some reason C-S-x does not work
 • mapped meta+shift+[0-9]
 • mapped alt+control+[left|right] to control+x,[left|right]
