--- a/README
+++ b/README
@@ -5,7 +5,7 @@ FEATURES:
 • xterm compatible, Emacs is better if it thinks you are using xterm
 • switch to any of the 63 VT:s
 • swapped left control with caps lock
-• swapped left alternative with less
+• swapped (left alternative → less → q)
 • circumflex and title are dead
 • control+shift+[a-z] as alternative to meta+[a-z], for some reason C-S-x does not work
 • mapped meta+shift+[0-9]
