--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 Alt+Shift+number does not work properly (without Shift works perfectly).
+Remove logical caps lock (or override with control)
 Add X keyboard layout.
