--- a/README
+++ b/README
@@ -1,1 +1,5 @@
+This repo has been moved to Codeberg and may be out of date on GitHub.
+Canonical repo: https://codeberg.org/maandree/my-keyboard
+
+
 My keyboard layout and Linux VT font
